<resources>
    <string name="app_name">Foosball</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="score_separator">:</string>
    <string name="add">Add</string>
    <string name="enter_first_person_name">Enter first person name</string>
    <string name="enter_second_person_name">Enter second person name</string>
    <string name="enter_first_person_score">Enter first person score</string>
    <string name="enter_second_person_score">Enter second person score</string>
    <string name="add_your_match">Add your match</string>
    <string name="edit_your_match">Edit your match</string>
    <string name="save">Save</string>
    <string name="rankings">Rankings</string>
    <string name="games_played">Games played: %1$d</string>
    <string name="games_won">Games won: %1$d</string>
    <string name="common_error">Error</string>
</resources>